--- a/help.html
+++ b/help.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <h1>Centro de Ayuda</h1>
-    <p>¿Tienes dudas? Aquí encontrarás respuestas a preguntas frecuentes.</p>
+    <p>¿Tienes dudas? Aquí encontrarás respuestas a preguntas frecuentes :).</p>
     
     <h2>Preguntas Frecuentes:</h2>
     <ul>
